Fix styles for slider images selection on mobile

--- a/components/Sections/SectionFirst/components/Title/styles.module.scss
+++ b/components/Sections/SectionFirst/components/Title/styles.module.scss
@@ -19,6 +19,7 @@
     font-family: "Montserrat", sans-serif;
     font-size: 108px;
     line-height: 125px;
+    color: $title-color;
   }
 
   .secondaryText {
