--- a/components/Sections/SectionFirst/components/TitlePhoto/styles.module.scss
+++ b/components/Sections/SectionFirst/components/TitlePhoto/styles.module.scss
@@ -98,5 +98,9 @@
     .dating_date_years {
       display: none;
     }
+
+    .photo {
+      border-radius: 0 0 25.5px;
+    }
   }
 }
