--- a/components/Sections/SectionImageQuestion/components/ImageQuestions/styles.module.scss
+++ b/components/Sections/SectionImageQuestion/components/ImageQuestions/styles.module.scss
@@ -36,7 +36,7 @@
   .wrapper {
     z-index: 999;
     padding-bottom: 520px;
-    gap: 8rem;
+    gap: 6rem;
     display: flex;
     align-items: center;
     justify-content: center;
